Fixed verticall alignment in Android devices

--- a/assets/sass/header/header.sass
+++ b/assets/sass/header/header.sass
@@ -2,12 +2,11 @@
 @import 'slide-4'
 @import 'humburguer/humburguer'
 
-.header .wrapper
+.header .v-align
+    width: 100%
+
+.header .v-wrapper
     text-align: center
-    // Vertical center
-    position: relative
-    transform: translateY(-50%)
-    top: 50%
 
 .header .full-name
     position: relative
